--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "apexcharts": "^4.3.0",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "openai": "^4.78.1",
