--- a/client/package.json
+++ b/client/package.json
@@ -16,18 +16,27 @@
     "@tanstack/react-router": "^1.95.3",
     "@vitejs/plugin-react": "^4.3.4",
     "apexcharts": "^4.3.0",
+    "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "moment": "^2.30.1",
     "openai": "^4.78.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-loading": "^2.0.3",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "react-spinners": "^0.15.0",
+    "remark-gfm": "^4.0.1",
+    "vnstock-js": "^0.2.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
